javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.21.METHODACCESS.javali
// You should not be able to access the field or method of a non-object
// rule 2.3.21

class Main {
	void main() {
		int x;
		x = 1;
		x.foo();
	}
}